# easy_ca

./: .env.example  .gitignore  LICENSE  README.md  check_ca.py  init_db.py  pyproject.toml  run.py  test_acme.py  test_certbot_unregister.py  test_challenge_endpoint.py  test_route_exists.py
app/: __init__.py  config.py  models.py
app/acme/: __init__.py  challenge_routes.py  routes.py  utils.py
app/auth/: __init__.py  routes.py
app/lib/: certificate_generator.py
app/main/: __init__.py  routes.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/main/: about.html  acme_settings.html  ca_detail.html  ca_list.html  ca_settings.html  certificate_detail.html  certificate_list.html  dashboard.html  home.html  import_ca.html  new_ca.html  new_certificate.html
migrations/: README.md
test/: test_acme_fix.py  test_certbot_authz.py  test_order_route.py
