[project]
name = "easy-ca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=45.0.6",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-tailwind>=0.2.2",
    "flask>=3.1.2",
    "requests>=2.32.5",
]
